# cli

./: CMakeLists.txt  conanfile.py
examples/: CMakeLists.txt  add_example.cmake  basic.cpp
include/: cli.hpp
include/cli/: Argument.hpp  Arity.hpp  BooleanFlags.hpp  CommandLine.hpp  GenericArgument.hpp  Help.hpp  InfoFlags.hpp  Keywords.hpp  Parse.hpp
include/cli/details/: ArrayTraits.hpp  Destination.hpp  Generator.hpp  GetDefaultArity.hpp  Parse.hpp  ParseTraits.hpp  Parse_fwd.hpp  Usage.hpp
test/: CMakeLists.txt  arity_test.cpp  array_traits_test.cpp  command_line_test.cpp  destination_test.cpp  parse_test.cpp
